--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: nginx_humble
     volumes:
       - ./etc/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - "${MARRTINOROBOT2_WEBI}/www:/var/www/html"
+      - "../www:/var/www/html"
     ports:
       - "80:80"
       - "443:443"
@@ -26,7 +26,7 @@ services:
     restart: always
 
   humble:
-    image: ferrarinifabio/marrtinorobot2:mate-vnc
+    image: robotics3d/marrtino:ros2-mate-vnc
     container_name: humble
     ports:
       - "8085:8085"
